welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if ((day == 0 || day == 1 || day == 2 || day == 3 || day == 4 ) && vacation == false )
  	{return ("7:00 ")}
  if ((day == 0 || day == 1 || day == 2 || day == 3 || day == 4 ) && vacation == true )
  	{return ("10:00")}
  if ((day == 5 || day == 6) && vacation == false)
  	{return("10:00")}
  if ((day == 5 || day == 6) && vacation == true)
  {return("off")}}